Cronometrinho ainda em desenvolvimento - pause esta funcionando

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-image: url('./images/ghost-riders.gif');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.time-out {
+  display: flex;
+  background-image: url('./images/senjutsu.gif');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 273px;
+  width: 640px;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timing {
+  background-image: url('./images/joker.gif');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 700px;
+  height: 291px;
+  border-radius: 10px;
 }
