--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@ body {
 .time-out {
   display: flex;
   background-image: url('./images/senjutsu.gif');
+  justify-content: center;
+  align-items: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 273px;
@@ -23,6 +25,7 @@ body {
   font-family: 'Fredericka the Great', cursive, sans-serif;
   color: rgb(124, 4, 4);
   font-size: 100px;
+  text-align: center;
 }
 
 .timing {
@@ -57,6 +60,7 @@ body {
   font-family: 'Fredericka the Great', cursive, sans-serif;
   font-size: 35px;
   color: black;
+  margin-top: 10px;
 }
 
 .render input[type="text"]{
